Jann 30/objects/RFA_DOA__c.object
<CustomObject>
    <description>This store the DOA category, Amount Ranges, Approver levels and Approver Groups.</description>
    <fields>
        <fullName>Amount_Lower_limit__c</fullName>
        <label>Amount (Lower limit)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Upper_limit__c</fullName>
        <label>Amount (Upper limit)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Group__c</fullName>
        <label>Approver Group</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Level__c</fullName>
        <description>Approver Level</description>
        <label>Approver Level</label>
        <picklist>
            <picklistValues>
                <fullName>KEYOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. EXEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOA_Control_Level__c</fullName>
        <description>This field will determine which coordinator level can control the levels</description>
        <label>DOA Control Level</label>
        <picklist>
            <picklistValues>
                <fullName>KEYOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_DOA_Category__c</fullName>
        <description>RFA Primary DOA Categorys</description>
        <label>Primary DOA Category</label>
        <picklist>
            <picklistValues>
                <fullName>1.A.1 Capital Expenditures - Annual Capital Plan Request or Formal Approval of Annual Capital Plan Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.a Capital Expenditures - Unbudgeted CPR or SPR Covered by Budget Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.b Capital Expenditures - Unbudgeted CPR or SPR Funded Partially or Fully from Corporate Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.3 Capital Expenditures - Increase or Scope Change to Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.4 Capital Expenditures - Transfer of Capital Budget across Groups for a Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.5 Capital Expenditures - Foreign Exchange Fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.8 Capital Expenditures - Advance Appropriations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.B Capital Expenditures - Capability and Performance Programs (CAPPrs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.C Capital Expenditures - Bottles and Cases, Including Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. IT Investments and Website Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.A Real Property - Acquisitions and Sales or Other Disposals of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.B Real Property - Donations of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.C Real Property - Condemnations or Easements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.A Leases - Operating Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.B Leases - Capital Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.A Inventory Adjustments and Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.B Other Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.C Asset Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.D Asset Disposals (Tangible Assets excluding Real Property and Inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.A Treasury - Banking Information Reports (BIR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.B Treasury - External Borrowings and Lines of Credit (RFFs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.C Treasury - Intercompany Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.D Treasury - Loans Third Parties (Including CCFC Target Loan Programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.1 Treasury - Guarantees to Third Parties - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.2 Treasury - Guarantees Related to Tax Disputes or Other Matters Involving Governmental Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.F Treasury - Comfort Letters and Other Financial Security Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.G Treasury - Accommodation Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.H Treasury - Credit Terms/Policies or Incentives for Sales to Customers, Bottlers or Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.1 Treasury - Exemption from Bad Debt Reserve Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.2 Treasury - Write-offs of Uncollectible Accounts Receivable from Bad Debt Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrimmedDOACategory__c</fullName>
        <formula>substitute(TEXT(Primary_DOA_Category__c),&apos; &apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TrimmedDOACategory</label>
        <type>Text</type>
    </fields>
    <label>RFA DOA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver_Level__c</columns>
        <columns>Approver_Group__c</columns>
        <columns>Approver_Type__c</columns>
        <columns>DOA_Control_Level__c</columns>
        <columns>Amount_Lower_limit__c</columns>
        <columns>Amount_Upper_limit__c</columns>
        <columns>Primary_DOA_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOA-{0000}</displayFormat>
        <label>DOA  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA DOAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RFA_DOA_Amount_UpperLimit_Exceeded</fullName>
        <active>true</active>
        <description>DOA Amount should not exceed 25</description>
        <errorConditionFormula>Amount_Lower_limit__c  &gt; Amount_Upper_limit__c || Amount_Lower_limit__c &lt; 0 || Amount_Lower_limit__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount (Upper limit) and Amount (Lower limit) should be non negative values.          
Amount (Lower limit) should not be greater than Amount (Upper limit)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFA_DOA_ApproverLevelRequired</fullName>
        <active>true</active>
        <description>Approver Levl Validation check</description>
        <errorConditionFormula>ISPICKVAL( Approver_Level__c , &apos;--Select--&apos;)</errorConditionFormula>
        <errorMessage>Approver Level is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFA_DOA_ApproverTypeRequired</fullName>
        <active>true</active>
        <description>Approver Type Validation check</description>
        <errorConditionFormula>ISPICKVAL(Approver_Type__c , &apos;--Select--&apos;)</errorConditionFormula>
        <errorMessage>Approver Type is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFA_DOA_Category_Required</fullName>
        <active>true</active>
        <description>DOA Category Validation check</description>
        <errorConditionFormula>ISPICKVAL(Primary_DOA_Category__c  , &apos;--Select--&apos;)</errorConditionFormula>
        <errorMessage>DOA Category is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFA_DOA_ControlLevel_Required</fullName>
        <active>true</active>
        <description>DOA Control Level Validation check</description>
        <errorConditionFormula>ISPICKVAL( DOA_Control_Level__c , &apos;--Select--&apos;)</errorConditionFormula>
        <errorMessage>DOA Control Level is Required</errorMessage>
    </validationRules>
</CustomObject>